Added FileTypeEnum group folders.